[dependencies]
freetype-rs = "0.37.0"
minifb = "0.27.0"
rusttype = "0.9.3"
fs = "0.0.5"
quote = "1.0.38"
syn = { version = "2.0.92", features = ["full"] }
laststraw-core = "0.1.0"
laststraw-core-macro = "0.1.0"

[profile.dev]
opt-level = 1

[profile.release]
opt-level = 3
#rustflags = ["-C", "target-cpu=native"]

[lib]
path = "src/lib.rs"

[package]
name = "laststraw"
version = "0.1.1"
edition = "2021"
authors = ["Hadrian Lazic"]
description = "A lightweight GUI Rust framework for quick desktop applications."
license = "MIT OR Apache-2.0"
repository = "https://github.com/had2020/Last-Straw"
keywords = ["framework", "rust", "high-performance"]
categories = ["gui", "rendering"]
